--- a/Servant_S01_E05.html
+++ b/Servant_S01_E05.html
@@ -19,7 +19,7 @@
         <img id="image" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673668443/LigoLab_Media_Templates_ikzws8.svg">
     </h5>
     <nav class="navbar navbar-light bg-light" id="nav1">
-        <a class="navbar-brand" href="./Servant_Home.html" id="nav-link">
+        <a class="navbar-brand" href="./index.html" id="nav-link">
             <img src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673674830/LigoLab_Media_Templates__3_-removebg-preview_s16s8j.png" width="100" height="50" class="d-inline-block align-top" alt="" loading="lazy">
             <img src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673674470/cooltext427393572871559_pqarnr.png" width="350" height="50" class="d-inline-block align-top" alt="" loading="lazy">
         </a>
