--- a/index_S02.html
+++ b/index_S02.html
@@ -22,10 +22,11 @@
 </nav>
 <div class="flex-row">
   <div class="card-title">
-    <h1 id="title"><img src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673684300/cooltext427400275109979_ctwaco.png"></h1>
+    <h1 id="title"><img src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673684643/cooltext427400544563621_bck6wc.png"></h1>
   </div>
   <div class="col">
-    <nav class="navbar navbar-light bg-light" id="nav-th">
+    <img src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673685192/Untitled_presentation_2_jrbbmy.png">
+    <!-- <nav class="navbar navbar-light bg-light" id="nav-th">
       <div class="card-header" id="thumb-header">
         <a class="navbar-brand" href="./Servant_S01_E01.html" id="nav-thumb">
           <img id="nav-img" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673675727/LigoLab_Media_Templates_14_eq7nbd.svg" class="d-inline-block align-top" alt="" loading="lazy">
@@ -56,11 +57,11 @@
         <img id="nav-img1" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673675724/LigoLab_Media_Templates_19_fi0ia3.svg" class="d-inline-block align-top" alt="" loading="lazy">
       </a>
       </div>
-    </nav>
+    </nav> -->
   </div>
   
 <div class="col">
-  <nav class="navbar navbar-light bg-light" id="nav-th">
+  <!-- <nav class="navbar navbar-light bg-light" id="nav-th">
     <div class="card-header" id="thumb-header">
     <a class="navbar-brand" href="./Servant_S01_E07.html" id="nav-thumb">
       <img id="nav-img" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673675723/LigoLab_Media_Templates_20_zffnz6.svg" class="d-inline-block align-top" alt="" loading="lazy">
@@ -80,7 +81,7 @@
       <img id="nav-img1" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673675723/LigoLab_Media_Templates_23_ijhrjk.svg" class="d-inline-block align-top" alt="" loading="lazy">
     </a>
     </div>
-  </nav>
+  </nav> -->
 </div>
  
 
