--- a/index.html
+++ b/index.html
@@ -14,12 +14,19 @@
   <title>Guapa Streaming</title>
 </head>
 <body>
+  <h5 style=" width: 100%; text-align: center; border-bottom: solid 2px black" class="card-header" id="card-header">
+    <img id="image" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673668443/LigoLab_Media_Templates_ikzws8.svg">
+</h5>
 <nav class="navbar navbar-light bg-light" id="nav">
   <a class="navbar-brand" href="./index.html" id="nav-link">
     <img src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673674830/LigoLab_Media_Templates__3_-removebg-preview_s16s8j.png" width="100" height="50" class="d-inline-block align-top" alt="" loading="lazy">
     <img src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673674470/cooltext427393572871559_pqarnr.png" width="350" height="50" class="d-inline-block align-top" alt="" loading="lazy">
   </a>
+  <a class="navbar-brand" href="./index_S02.html" id="nav-link">
+    <img src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673684643/cooltext427400544563621_bck6wc.png" width="100" height="25" class="d-inline-block align-top" alt="" loading="lazy">
+</a>
 </nav>
+
 <div class="flex-row">
   <div class="card-title">
     <h1 id="title"><img src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673684300/cooltext427400275109979_ctwaco.png"></h1>
