--- a/index_S02.html
+++ b/index_S02.html
@@ -22,8 +22,8 @@
     <img src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673674830/LigoLab_Media_Templates__3_-removebg-preview_s16s8j.png" width="100" height="50" class="d-inline-block align-top" alt="" loading="lazy">
     <img src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673674470/cooltext427393572871559_pqarnr.png" width="350" height="50" class="d-inline-block align-top" alt="" loading="lazy">
   </a>
-  <a class="navbar-brand" href="./index_S02.html" id="nav-link">
-    <img src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673684300/cooltext427400275109979_ctwaco.png" width="100" height="25" class="d-inline-block align-top" alt="" loading="lazy">
+  <a class="navbar-brand" href="./index.html" id="nav-season">
+    <img src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673684300/cooltext427400275109979_ctwaco.png" width="200" height="50" class="d-inline-block align-top" alt="" loading="lazy">
 </a>
 </nav>
 <div class="flex-row">
