--- a/Servant_S01_E10.html
+++ b/Servant_S01_E10.html
@@ -56,7 +56,7 @@
     </nav>
     <div style="padding: 0; margin:0; background-image: linear-gradient(rgba(96, 96, 100, 0.974) 0%, rgb(228, 234, 239) 100%);border: solid 2px black; border-radius: 1em" class="embed-responsive embed-responsive-16by9 d-flex justify-content-center">
         <div class="embed-responsive embed-responsive-21by9">
-            <div style="padding:50% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/789229131?h=f237c1fee1&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Episode-10-S01  Balloon.mkv"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+            <iframe src="https://player.vimeo.com/video/789229131?h=f237c1fee1&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Episode-10-S01  Balloon.mkv"></iframe><script src="https://player.vimeo.com/api/player.js"></script>
         </div>
     </div>
 </div>
