--- a/index_S02.html
+++ b/index_S02.html
@@ -18,9 +18,9 @@
     <img id="image" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673668443/LigoLab_Media_Templates_ikzws8.svg">
 </h5>
 <nav class="navbar navbar-light bg-light" id="nav">
-  <a class="navbar-brand" href="./index.html" id="nav-link">
+  <a class="navbar-brand" href="./index.html" id="nav-link1">
     <img src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673674830/LigoLab_Media_Templates__3_-removebg-preview_s16s8j.png" width="100" height="50" class="d-inline-block align-top" alt="" loading="lazy">
-    <img src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673674470/cooltext427393572871559_pqarnr.png" width="350" height="50" class="d-inline-block align-top" alt="" loading="lazy">
+    <img id="guapa" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673674470/cooltext427393572871559_pqarnr.png" class="d-inline-block align-top" alt="" loading="lazy">
   </a>
   <a class="navbar-brand" href="./index.html" id="nav-season">
     <img src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673684300/cooltext427400275109979_ctwaco.png" width="200" height="50" class="d-inline-block align-top" alt="" loading="lazy">
@@ -31,7 +31,7 @@
     <h1 id="title"><img src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673684643/cooltext427400544563621_bck6wc.png"></h1>
   </div>
   <div class="col">
-    <img id="season-2" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673685192/Untitled_presentation_2_jrbbmy.png">
+    <img id="season-2" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673689549/Untitled_presentation_4_fyuquw.png">
     <!-- <nav class="navbar navbar-light bg-light" id="nav-th">
       <div class="card-header" id="thumb-header">
         <a class="navbar-brand" href="./Servant_S01_E01.html" id="nav-thumb">
