--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <img id="image" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673668443/LigoLab_Media_Templates_ikzws8.svg">
 </h5>
 <nav class="navbar navbar-light bg-light" id="nav">
-  <a class="navbar-brand" href="./index.html" id="nav-link">
+  <a class="navbar-brand" href="./index.html" id="nav-link1">
     <img src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673674830/LigoLab_Media_Templates__3_-removebg-preview_s16s8j.png" width="100" height="50" class="d-inline-block align-top" alt="" loading="lazy">
-    <img src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673674470/cooltext427393572871559_pqarnr.png" width="350" height="50" class="d-inline-block align-top" alt="" loading="lazy">
+    <img id="guapa" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673674470/cooltext427393572871559_pqarnr.png" class="d-inline-block align-top" alt="" loading="lazy">
   </a>
   <a class="navbar-brand" href="./index_S02.html" id="nav-season">
     <img src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673684643/cooltext427400544563621_bck6wc.png" width="200" height="50" class="d-inline-block align-top" alt="" loading="lazy">
@@ -37,7 +37,7 @@
         <a class="navbar-brand" href="./Servant_S01_E01.html" id="nav-thumb">
           <img id="nav-img" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673675727/LigoLab_Media_Templates_14_eq7nbd.svg" class="d-inline-block align-top" alt="" loading="lazy">
         </a>
-        <a class="navbar-brand" href="./Servant_S01_E02.html" id="nav-thumb">
+        <a class="navbar-brand" href="./Servant_S01_E02.html" id="nav-thumb1">
           <img id="nav-img1" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673675727/LigoLab_Media_Templates_15_resfyc.svg" class="d-inline-block align-top" alt="" loading="lazy">
         </a>
       </div>
@@ -48,7 +48,7 @@
       <a class="navbar-brand" href="./Servant_S01_E03.html" id="nav-thumb">
         <img id="nav-img" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673675727/LigoLab_Media_Templates_16_ezszwj.svg" class="d-inline-block align-top" alt="" loading="lazy">
       </a>
-      <a class="navbar-brand" href="./Servant_S01_E04.html" id="nav-thumb">
+      <a class="navbar-brand" href="./Servant_S01_E04.html" id="nav-thumb1">
         <img id="nav-img1" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673675726/LigoLab_Media_Templates_17_hxig5b.svg" class="d-inline-block align-top" alt="" loading="lazy">
       </a>
       </div>
@@ -59,20 +59,20 @@
       <a class="navbar-brand" href="./Servant_S01_E05.html" id="nav-thumb">
         <img id="nav-img" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673675724/LigoLab_Media_Templates_18_h0ktrr.svg" class="d-inline-block align-top" alt="" loading="lazy">
       </a>
-      <a class="navbar-brand" href="./Servant_S01_E06.html" id="nav-thumb">
+      <a class="navbar-brand" href="./Servant_S01_E06.html" id="nav-thumb1">
         <img id="nav-img1" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673675724/LigoLab_Media_Templates_19_fi0ia3.svg" class="d-inline-block align-top" alt="" loading="lazy">
       </a>
       </div>
     </nav>
   </div>
   
-<div class="col">
+<div class="col justify-content-center">
   <nav class="navbar navbar-light bg-light" id="nav-th">
     <div class="card-header" id="thumb-header">
     <a class="navbar-brand" href="./Servant_S01_E07.html" id="nav-thumb">
       <img id="nav-img" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673675723/LigoLab_Media_Templates_20_zffnz6.svg" class="d-inline-block align-top" alt="" loading="lazy">
     </a>
-    <a class="navbar-brand" href="./Servant_S01_E08.html" id="nav-thumb">
+    <a class="navbar-brand" href="./Servant_S01_E08.html" id="nav-thumb1">
       <img id="nav-img1" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673675723/LigoLab_Media_Templates_21_cowmnk.svg" class="d-inline-block align-top" alt="" loading="lazy">
     </a>
     </div>
@@ -83,7 +83,7 @@
     <a class="navbar-brand" href="./Servant_S01_E09.html" id="nav-thumb">
       <img id="nav-img" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673675723/LigoLab_Media_Templates_22_fwiems.svg" class="d-inline-block align-top" alt="" loading="lazy">
     </a>
-    <a class="navbar-brand" href="./Servant_S01_E10.html" id="nav-thumb">
+    <a class="navbar-brand" href="./Servant_S01_E10.html" id="nav-thumb1">
       <img id="nav-img1" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673675723/LigoLab_Media_Templates_23_ijhrjk.svg" class="d-inline-block align-top" alt="" loading="lazy">
     </a>
     </div>
