--- a/Servant_S01_E06.html
+++ b/Servant_S01_E06.html
@@ -18,11 +18,17 @@
     <h5 style=" width: 100%; text-align: center; border-bottom: solid 2px black" class="card-header" id="card-header">
         <img id="image" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673668443/LigoLab_Media_Templates_ikzws8.svg">
     </h5>
-    <nav class="navbar navbar-light bg-light" id="nav1">
-        <a class="navbar-brand" href="./index.html" id="nav-link">
-            <img src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673674830/LigoLab_Media_Templates__3_-removebg-preview_s16s8j.png" width="100" height="50" class="d-inline-block align-top" alt="" loading="lazy">
-            <img src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673674470/cooltext427393572871559_pqarnr.png" width="350" height="50" class="d-inline-block align-top" alt="" loading="lazy">
+    <nav class="navbar navbar-light bg-light" id="nav">
+        <a class="navbar-brand" href="./index.html" id="nav-link1">
+          <img src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673674830/LigoLab_Media_Templates__3_-removebg-preview_s16s8j.png" width="100" height="50" class="d-inline-block align-top" alt="" loading="lazy">
+          <img id="guapa" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673674470/cooltext427393572871559_pqarnr.png" class="d-inline-block align-top" alt="" loading="lazy">
         </a>
+        <a class="navbar-brand" href="./index.html" id="nav-season">
+        <img src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673693248/cooltext427405901190744_fzelvo.png" width="225" height="50" class="d-inline-block align-top" alt="" loading="lazy">
+        </a>
+      </nav>
+
+      <nav class="navbar navbar-light bg-light" id="nav-2">
         <a class="navbar-brand" href="./Servant_S01_E01.html" id="nav-link">
             <img src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673677926/cooltext427394112676234_ufkjgz.png" width="100" height="25" class="d-inline-block align-top" alt="" loading="lazy">
         </a>
