--- a/index_S02.html
+++ b/index_S02.html
@@ -23,8 +23,16 @@
     <img id="guapa" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673674470/cooltext427393572871559_pqarnr.png" class="d-inline-block align-top" alt="" loading="lazy">
   </a>
   <a class="navbar-brand" href="./index.html" id="nav-season">
-    <img src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673684300/cooltext427400275109979_ctwaco.png" width="200" height="50" class="d-inline-block align-top" alt="" loading="lazy">
-</a>
+    <img src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673693248/cooltext427405901190744_fzelvo.png" width="225" height="50" class="d-inline-block align-top" alt="" loading="lazy">
+    </a>
+</nav>
+  <nav class="navbar navbar-light bg-light" id="nav-2">
+    <a class="navbar-brand" href="./index.html" id="nav-season">
+      <img src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673684300/cooltext427400275109979_ctwaco.png" width="225" height="50" class="d-inline-block align-top" alt="" loading="lazy">
+    </a>
+    <a class="navbar-brand" href="./index_S02.html" id="nav-season">
+      <img src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673684643/cooltext427400544563621_bck6wc.png" width="225" height="50" class="d-inline-block align-top" alt="" loading="lazy">
+    </a>
 </nav>
 <div class="flex-row">
   <div class="card-title">
