--- a/index_S02.html
+++ b/index_S02.html
@@ -39,13 +39,12 @@
     <h1 id="title"><img src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673684643/cooltext427400544563621_bck6wc.png"></h1>
   </div>
   <div class="col">
-    <img id="season-2" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673689549/Untitled_presentation_4_fyuquw.png">
-    <!-- <nav class="navbar navbar-light bg-light" id="nav-th">
+    <nav class="navbar navbar-light bg-light" id="nav-th">
       <div class="card-header" id="thumb-header">
-        <a class="navbar-brand" href="./Servant_S01_E01.html" id="nav-thumb">
+        <a class="navbar-brand" href="./Servant_S02_E01.html" id="nav-thumb">
           <img id="nav-img" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673675727/LigoLab_Media_Templates_14_eq7nbd.svg" class="d-inline-block align-top" alt="" loading="lazy">
         </a>
-        <a class="navbar-brand" href="./Servant_S01_E02.html" id="nav-thumb">
+        <a class="navbar-brand" href="./Servant_S02_E02.html" id="nav-thumb">
           <img id="nav-img1" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673675727/LigoLab_Media_Templates_15_resfyc.svg" class="d-inline-block align-top" alt="" loading="lazy">
         </a>
       </div>
@@ -53,10 +52,10 @@
   
     <nav class="navbar navbar-light bg-light" id="nav-th">
       <div class="card-header" id="thumb-header">
-      <a class="navbar-brand" href="./Servant_S01_E03.html" id="nav-thumb">
+      <a class="navbar-brand" href="./Servant_S02_E03.html" id="nav-thumb">
         <img id="nav-img" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673675727/LigoLab_Media_Templates_16_ezszwj.svg" class="d-inline-block align-top" alt="" loading="lazy">
       </a>
-      <a class="navbar-brand" href="./Servant_S01_E04.html" id="nav-thumb">
+      <a class="navbar-brand" href="./Servant_S02_E04.html" id="nav-thumb">
         <img id="nav-img1" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673675726/LigoLab_Media_Templates_17_hxig5b.svg" class="d-inline-block align-top" alt="" loading="lazy">
       </a>
       </div>
@@ -64,23 +63,23 @@
   
     <nav class="navbar navbar-light bg-light" id="nav-th">
       <div class="card-header" id="thumb-header">
-      <a class="navbar-brand" href="./Servant_S01_E05.html" id="nav-thumb">
+      <a class="navbar-brand" href="./Servant_S02_E05.html" id="nav-thumb">
         <img id="nav-img" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673675724/LigoLab_Media_Templates_18_h0ktrr.svg" class="d-inline-block align-top" alt="" loading="lazy">
       </a>
-      <a class="navbar-brand" href="./Servant_S01_E06.html" id="nav-thumb">
+      <a class="navbar-brand" href="./Servant_S02_E06.html" id="nav-thumb">
         <img id="nav-img1" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673675724/LigoLab_Media_Templates_19_fi0ia3.svg" class="d-inline-block align-top" alt="" loading="lazy">
       </a>
       </div>
-    </nav> -->
+    </nav>
   </div>
   
 <div class="col">
-  <!-- <nav class="navbar navbar-light bg-light" id="nav-th">
+  <nav class="navbar navbar-light bg-light" id="nav-th">
     <div class="card-header" id="thumb-header">
-    <a class="navbar-brand" href="./Servant_S01_E07.html" id="nav-thumb">
+    <a class="navbar-brand" href="./Servant_S02_E07.html" id="nav-thumb">
       <img id="nav-img" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673675723/LigoLab_Media_Templates_20_zffnz6.svg" class="d-inline-block align-top" alt="" loading="lazy">
     </a>
-    <a class="navbar-brand" href="./Servant_S01_E08.html" id="nav-thumb">
+    <a class="navbar-brand" href="./Servant_S02_E08.html" id="nav-thumb">
       <img id="nav-img1" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673675723/LigoLab_Media_Templates_21_cowmnk.svg" class="d-inline-block align-top" alt="" loading="lazy">
     </a>
     </div>
@@ -88,14 +87,14 @@
 
   <nav class="navbar navbar-light bg-light" id="nav-th">
     <div class="card-header" id="thumb-header">
-    <a class="navbar-brand" href="./Servant_S01_E09.html" id="nav-thumb">
+    <a class="navbar-brand" href="./Servant_S02_E09.html" id="nav-thumb">
       <img id="nav-img" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673675723/LigoLab_Media_Templates_22_fwiems.svg" class="d-inline-block align-top" alt="" loading="lazy">
     </a>
-    <a class="navbar-brand" href="./Servant_S01_E10.html" id="nav-thumb">
+    <a class="navbar-brand" href="./Servant_S02_E10.html" id="nav-thumb">
       <img id="nav-img1" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673675723/LigoLab_Media_Templates_23_ijhrjk.svg" class="d-inline-block align-top" alt="" loading="lazy">
     </a>
     </div>
-  </nav> -->
+  </nav>
 </div>
  
 
