--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </nav>
 
   <nav class="navbar navbar-light bg-light" id="nav-2">
-    <a class="navbar-brand" href="./index.html" id="nav-season">
+    <a class="navbar-brand" href="./index_S01.html" id="nav-season">
       <img src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673684300/cooltext427400275109979_ctwaco.png" width="225" height="50" class="d-inline-block align-top" alt="" loading="lazy">
     </a>
     <a class="navbar-brand" href="./index_S02.html" id="nav-season">
@@ -37,68 +37,32 @@
   </nav>
 
 <div class="flex-row">
+
   <div class="card-title">
     <h1 id="title"><img src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673684300/cooltext427400275109979_ctwaco.png"></h1>
   </div>
+
   <div class="col">
     <nav class="navbar navbar-light bg-light" id="nav-th">
-      <div class="card-header" id="thumb-header">
-        <a class="navbar-brand" href="./Servant_S01_E01.html" id="nav-thumb">
-          <img id="nav-img" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673675727/LigoLab_Media_Templates_14_eq7nbd.svg" class="d-inline-block align-top" alt="" loading="lazy">
-        </a>
-        <a class="navbar-brand" href="./Servant_S01_E02.html" id="nav-thumb1">
-          <img id="nav-img1" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673675727/LigoLab_Media_Templates_15_resfyc.svg" class="d-inline-block align-top" alt="" loading="lazy">
+      <div class="card-header" id="thumb-header1">
+        <a class="navbar-brand" href="./index_S01.html" id="nav-thumb">
+          <img id="nav-img" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673831042/Untitled_presentation_3_jpq39p.svg" class="d-inline-block align-top" alt="" loading="lazy">
         </a>
       </div>
     </nav>
-  
+
+    <div class="card-title">
+      <h1 id="title"><img src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673684643/cooltext427400544563621_bck6wc.png"></h1>
+    </div>
+
     <nav class="navbar navbar-light bg-light" id="nav-th">
-      <div class="card-header" id="thumb-header">
-      <a class="navbar-brand" href="./Servant_S01_E03.html" id="nav-thumb">
-        <img id="nav-img" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673675727/LigoLab_Media_Templates_16_ezszwj.svg" class="d-inline-block align-top" alt="" loading="lazy">
-      </a>
-      <a class="navbar-brand" href="./Servant_S01_E04.html" id="nav-thumb1">
-        <img id="nav-img1" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673675726/LigoLab_Media_Templates_17_hxig5b.svg" class="d-inline-block align-top" alt="" loading="lazy">
-      </a>
-      </div>
-    </nav>
-  
-    <nav class="navbar navbar-light bg-light" id="nav-th">
-      <div class="card-header" id="thumb-header">
-      <a class="navbar-brand" href="./Servant_S01_E05.html" id="nav-thumb">
-        <img id="nav-img" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673675724/LigoLab_Media_Templates_18_h0ktrr.svg" class="d-inline-block align-top" alt="" loading="lazy">
-      </a>
-      <a class="navbar-brand" href="./Servant_S01_E06.html" id="nav-thumb1">
-        <img id="nav-img1" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673675724/LigoLab_Media_Templates_19_fi0ia3.svg" class="d-inline-block align-top" alt="" loading="lazy">
+      <div class="card-header" id="thumb-header1">
+      <a class="navbar-brand" href="./index_S02.html" id="nav-thumb">
+        <img id="nav-img" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673831041/Untitled_presentation_4_kmv4m8.svg" class="d-inline-block align-top" alt="" loading="lazy">
       </a>
       </div>
     </nav>
   </div>
-  
-<div class="col justify-content-center">
-  <nav class="navbar navbar-light bg-light" id="nav-th">
-    <div class="card-header" id="thumb-header">
-    <a class="navbar-brand" href="./Servant_S01_E07.html" id="nav-thumb">
-      <img id="nav-img" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673675723/LigoLab_Media_Templates_20_zffnz6.svg" class="d-inline-block align-top" alt="" loading="lazy">
-    </a>
-    <a class="navbar-brand" href="./Servant_S01_E08.html" id="nav-thumb1">
-      <img id="nav-img1" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673675723/LigoLab_Media_Templates_21_cowmnk.svg" class="d-inline-block align-top" alt="" loading="lazy">
-    </a>
-    </div>
-  </nav>
-
-  <nav class="navbar navbar-light bg-light" id="nav-th">
-    <div class="card-header" id="thumb-header">
-    <a class="navbar-brand" href="./Servant_S01_E09.html" id="nav-thumb">
-      <img id="nav-img" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673675723/LigoLab_Media_Templates_22_fwiems.svg" class="d-inline-block align-top" alt="" loading="lazy">
-    </a>
-    <a class="navbar-brand" href="./Servant_S01_E10.html" id="nav-thumb1">
-      <img id="nav-img1" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673675723/LigoLab_Media_Templates_23_ijhrjk.svg" class="d-inline-block align-top" alt="" loading="lazy">
-    </a>
-    </div>
-  </nav>
-</div>
- 
 
 </div>
 
