--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </div>
 
   <div class="col">
-    <nav class="navbar navbar-light bg-light" id="nav-th">
+    <nav class="navbar navbar-light bg-light" id="nav-th1">
       <div class="card-header" id="thumb-header1">
         <a class="navbar-brand" href="./index_S01.html" id="nav-thumb">
           <img id="nav-img" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673831042/Untitled_presentation_3_jpq39p.svg" class="d-inline-block align-top" alt="" loading="lazy">
@@ -55,7 +55,7 @@
       <h1 id="title"><img src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673684643/cooltext427400544563621_bck6wc.png"></h1>
     </div>
 
-    <nav class="navbar navbar-light bg-light" id="nav-th">
+    <nav class="navbar navbar-light bg-light" id="nav-th1">
       <div class="card-header" id="thumb-header1">
       <a class="navbar-brand" href="./index_S02.html" id="nav-thumb">
         <img id="nav-img" src="https://res.cloudinary.com/dhqsixgmo/image/upload/v1673831041/Untitled_presentation_4_kmv4m8.svg" class="d-inline-block align-top" alt="" loading="lazy">
